chainsaw/step-templates/apply-podinfo.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: StepTemplate
metadata:
  name: apply-podinfo
spec:
  try:
  - apply:
      file: ../../testdata/podinfo.yaml
  - wait:
      apiVersion: v1
      kind: Pod
      name: frontend-podinfo
      for:
        condition:
          name: Ready
          value: 'true'
