chainsaw/step-templates/stop-podinfo.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: StepTemplate
metadata:
  name: stop-podinfo
spec:
  try:
    - delete:
        ref:
          apiVersion: v1
          kind: Pod
          name: frontend-podinfo
    - wait:
        apiVersion: v1
        kind: Pod
        name: frontend-podinfo
        for:
          deletion: {}
