chainsaw/tests/roundrobin-istio/chainsaw-test.yaml
# start podinfo on EU and US clusters
# verify that DNS resolves to 4 IP addresses
# stop podinfo on one cluster at a time
# verify DNS resolution is expected
# start podinfo again
# verify DNS resolution is expected
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: roundrobin-istio
spec:
  namespace: roundrobin-istio
  steps:
  - name: init EU
    description: setup podinfo application and GSLB on EU cluster
    cluster: eu
    use:
      template: ../../step-templates/init-istio.yaml
  - name: init US
    description: setup podinfo application and GSLB on US cluster
    cluster: us
    use:
      template: ../../step-templates/init-istio.yaml
  - name: DNS resolves to all IP addresses
    description: verify that coredns on both clusters returns the expected number of records
    use:
      with:
        bindings:
        - name: expected_records
          value: "4"
      template: ../../step-templates/assert-number-dns-records.yaml
  - name: stop app on EU
    description: stop app on EU cluster
    cluster: eu
    use:
      template: ../../step-templates/stop-podinfo.yaml
  - name: DNS resolves to US IP addresses
    description: verify that coredns on both clusters returns the expected number of records
    cluster: us
    use:
      template: ../../step-templates/assert-dns.yaml
  - name: stop app on US
    description: stop app on US cluster
    cluster: us
    use:
      template: ../../step-templates/stop-podinfo.yaml
  - name: DNS resolves to no IP addresses
    description: verify that coredns on both clusters returns the expected number of records
    use:
      with:
        bindings:
        - name: expected_records
          value: "0"
      template: ../../step-templates/assert-number-dns-records.yaml
  - name: start app on EU
    description: restore application on EU cluster
    cluster: eu
    use:
      template: ../../step-templates/apply-podinfo.yaml
  - name: DNS resolves to EU IP addresses
    description: assert that coredns on both clusters resolves to EU
    cluster: eu
    use:
      template: ../../step-templates/assert-dns.yaml
  - name: start app on US
    description: restore application on US cluster
    cluster: us
    use:
      template: ../../step-templates/apply-podinfo.yaml
  - name: DNS resolves to all IP addresses
    description: verify that coredns on both clusters returns the expected number of records
    use:
      with:
        bindings:
        - name: expected_records
          value: "4"
      template: ../../step-templates/assert-number-dns-records.yaml
